feat: tailwind + auth layout

--- a/src/auth/shared/components/auth-form/auth-form.component.html
+++ b/src/auth/shared/components/auth-form/auth-form.component.html
@@ -1,1 +1,22 @@
-<div>Auth form!</div>
+<form class="auth-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+  <ng-content select="h1"></ng-content>
+
+  <label class="mt-2">
+    <input type="email" placeholder="Email address" formControlName="email" />
+  </label>
+  <label class="mt-2">
+    <input type="password" placeholder="Enter password" formControlName="password" />
+  </label>
+
+  <div class="error mt-2" *ngIf="emailFormat">Invalid email format</div>
+  <div class="error mt-2" *ngIf="passwordInvalid">Password is required</div>
+
+  <ng-content select=".error"></ng-content>
+
+  <div class="mt-4">
+    <ng-content select="button"></ng-content>
+  </div>
+  <div class="mt-2">
+    <ng-content select="a"></ng-content>
+  </div>
+</form>
