--- a/src/auth/register/containers/register/register.component.html
+++ b/src/auth/register/containers/register/register.component.html
@@ -1,2 +1,5 @@
-<p>register works!</p>
-<app-auth-form></app-auth-form>
+<app-auth-form (submitted)="registerUser($event)">
+  <h1 class="text-4xl">Register</h1>
+  <a routerLink="/auth/login">Already have an account?</a>
+  <button type="submit">Create account</button>
+</app-auth-form>
