--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
   }
 
   input {
-    @apply h-8 rounded-xl bg-opacity-10 p-4 hover:border-indigo-800 border-[1px]
+    @apply h-8 rounded-xl bg-opacity-10 p-5 hover:border-indigo-800 border-[1px] drop-shadow-md
   }
 
   a {
