--- a/src/auth/login/containers/login/login.component.html
+++ b/src/auth/login/containers/login/login.component.html
@@ -2,4 +2,7 @@
   <h1 class="text-4xl">Login</h1>
   <a routerLink="/auth/register">Not registered?</a>
   <button type="submit">Login</button>
+  <div class="error" *ngIf="errorMessage">
+    {{ errorMessage }}
+  </div>
 </app-auth-form>
