--- a/src/auth/register/containers/register/register.component.html
+++ b/src/auth/register/containers/register/register.component.html
@@ -2,4 +2,7 @@
   <h1 class="text-4xl">Register</h1>
   <a routerLink="/auth/login">Already have an account?</a>
   <button type="submit">Create account</button>
+  <div class="error" *ngIf="errorMessage">
+    {{ errorMessage }}
+  </div>
 </app-auth-form>
