--- a/src/auth/shared/components/auth-form/auth-form.component.scss
+++ b/src/auth/shared/components/auth-form/auth-form.component.scss
@@ -1,3 +1,3 @@
 .auth-form {
-  @apply flex flex-col dark:text-white items-center border-indigo-400 drop-shadow-lg
+  @apply dark:text-white items-center border-indigo-400 drop-shadow-lg bg-white p-10 w-80
 }
