feat: meal-form

--- a/src/app/core/components/navigation/navigation.component.html
+++ b/src/app/core/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="bg-indigo-500">
-  <div class="max-w-4xl m-auto flex justify-center">
-    <a class="navigation-item" routerLink="schedule" routerLinkActivate="">Schedule</a>
-    <a class="navigation-item" routerLink="meals" routerLinkActivate="">Meals</a>
-    <a class="navigation-item" routerLink="workouts" routerLinkActivate="">Workouts</a>
+  <div class="max-w-4xl m-auto flex flex-col sm:flex-row justify-center">
+    <a class="navigation-item" routerLink="schedule" routerLinkActive="active">Schedule</a>
+    <a class="navigation-item" routerLink="meals" routerLinkActive="active">Meals</a>
+    <a class="navigation-item" routerLink="workouts" routerLinkActive="active">Workouts</a>
   </div>
 </nav>
