feat: meals completed

--- a/src/app/core/components/navigation/navigation.component.scss
+++ b/src/app/core/components/navigation/navigation.component.scss
@@ -1,8 +1,8 @@
 .navigation-item {
   &.active {
-    @apply no-underline border-b-lime-500
+    @apply no-underline border-l-4 sm:border-l-0 sm:border-b-4 border-lime-500
   }
 
-  @apply min-w-[150px] py-3 border-b-4 border-transparent uppercase text-center text-white hover:no-underline hover:border-b-lime-500 focus:border-b-lime-500
+  @apply min-w-[150px] py-3 border-l-4 sm:border-l-0 sm:border-b-4 border-transparent uppercase text-center text-white hover:no-underline hover:border-lime-500 focus:border-lime-500
 }
 
