--- a/src/app/health/shared/components/list-item/list-item.component.html
+++ b/src/app/health/shared/components/list-item/list-item.component.html
@@ -1,6 +1,12 @@
 <a class="inline-block" [routerLink]="getRoute(item)">
   <p class="text-2xl font-bold">{{ item.name }}</p>
-  <p class="text-slate-400 overflow-hidden">{{ item.ingredients }}</p>
+  <p *ngIf="item.ingredients; else showWorkout" class="text-slate-400 overflow-hidden">
+    {{ item.ingredients | join }}
+  </p>
+
+  <ng-template #showWorkout>
+    <p>{{ item | workout }}</p>
+  </ng-template>
 </a>
 
 <div class="min-w-fit">
