--- a/src/app/auth/shared/components/auth-form/auth-form.component.scss
+++ b/src/app/auth/shared/components/auth-form/auth-form.component.scss
@@ -1,3 +1,3 @@
 .auth-form {
-  @apply dark:text-white items-center border-indigo-400 drop-shadow-lg bg-white p-10 w-80
+  @apply dark:text-white dark:bg-black items-center border-indigo-400 drop-shadow-lg bg-white p-10 w-80 m-auto;
 }
