--- a/src/app/health/schedule/components/schedule-days/schedule-days.component.html
+++ b/src/app/health/schedule/components/schedule-days/schedule-days.component.html
@@ -1,11 +1,13 @@
-<input #displayButtons class="hidden" type="checkbox" />
-<button
-  type="button"
-  class="transition-all border-0 hover:shadow-md hidden sm:inline-block"
-  [class.active]="i === selected"
-  *ngFor="let day of days; index as i"
-  (click)="selectDay(i)">
-  <span>
-    {{ day }}
-  </span>
-</button>
+<div class="content">
+  <input #displayButtons class="hidden" type="checkbox" />
+  <button
+    type="button"
+    class="transition-all border-0 hover:shadow-md hidden sm:inline-block"
+    [class.active]="i === selected"
+    *ngFor="let day of days; index as i"
+    (click)="selectDay(i)">
+    <span>
+      {{ day }}
+    </span>
+  </button>
+</div>
