--- a/src/app/core/containers/app/app.component.html
+++ b/src/app/core/containers/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header [user]="user$ | async" (logout)="onLogout()"></app-header>
+<app-header [user]="user$ | async" [isLightTheme]="isLightTheme" (logout)="onLogout()"></app-header>
 <app-navigation *ngIf="(user$ | async)?.authenticated"></app-navigation>
 <main class="p-5 max-w-4xl m-auto">
   <router-outlet></router-outlet>
