--- a/src/app/health/meals/components/meal-form/meal-form.component.html
+++ b/src/app/health/meals/components/meal-form/meal-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" class="bg-white divide-y divide-indigo-300">
+<form [formGroup]="form" class="bg-white dark:bg-black dark:text-white divide-y divide-indigo-300">
   <div class="p-5">
     <label class="block">
       <h3 [ngClass]="{ error: required }">
@@ -19,16 +19,7 @@
         type="button"
         class="flex items-center ml-auto py-2 px-4 uppercase text-sm"
         (click)="addIngredient()">
-        <svg
-          class="w-4 h-4 mr-2"
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg">
-          <path
-            fill-rule="evenodd"
-            d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-9h3a1 1 0 010 2h-3v3a1 1 0 01-2 0v-3H6a1 1 0 010-2h3V6a1 1 0 012 0v3z"
-            clip-rule="evenodd"></path>
-        </svg>
+        <img class="w-4 h-4 mr-2" src="assets/images/add.svg" alt="add icon" />
         Add food
       </button>
     </div>
