--- a/src/app/health/schedule/components/schedule-assign/schedule-assign.component.html
+++ b/src/app/health/schedule/components/schedule-assign/schedule-assign.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-  <div class="flex justify-between items-center p-5 bg-slate-100 border-b border-indigo-300">
+  <div
+    *ngIf="section"
+    class="flex justify-between items-center p-5 bg-slate-100 border-b border-indigo-300">
     <img
       class="w-10 h-10"
       src="assets/images/{{ section.type === 'workouts' ? 'workout' : 'meal' }}.svg"
@@ -7,30 +9,22 @@
     <h1>Assign {{ section.type }}</h1>
     <a
       [routerLink]="getRoute(section.type)"
-      class="button flex items-center py-2 px-4 uppercase text-sm">
-      <svg
-        class="w-4 h-4 mr-2"
-        fill="currentColor"
-        viewBox="0 0 20 20"
-        xmlns="http://www.w3.org/2000/svg">
-        <path
-          fill-rule="evenodd"
-          d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-9h3a1 1 0 010 2h-3v3a1 1 0 01-2 0v-3H6a1 1 0 010-2h3V6a1 1 0 012 0v3z"
-          clip-rule="evenodd"></path>
-      </svg>
+      class="button flex items-center py-1 px-2 uppercase text-sm">
+      <img class="w-4 h-4 mr-2" src="assets/images/add.svg" alt="add icon" />
       New {{ section.type }}
     </a>
   </div>
+
   <div class="m-7 border min-h-[100px]" *ngIf="list">
-    <span *ngIf="!list.length">
-      <!-- <img src="face" alt=""> -->
+    <span *ngIf="!list.length" class="flex justify-center items-center">
+      <img class="w-5 h-5 mr-1" src="assets/images/face.svg" alt="sad face" />
       Nothing here to assign
     </span>
     <div
       *ngFor="let item of list"
       class="toggle-item"
       tabindex="0"
-      (keypress.enter)="toggleItem(item.name)"
+      (keydown.enter)="toggleItem(item.name)"
       [class.active]="exists(item.name)"
       (click)="toggleItem(item.name)">
       {{ item.name }}
