--- a/src/app/health/shared/components/list-item/list-item.component.html
+++ b/src/app/health/shared/components/list-item/list-item.component.html
@@ -1,5 +1,5 @@
 <a class="inline-block" [routerLink]="getRoute(item)">
-  <p class="text-2xl font-bold">{{ item.name }}</p>
+  <p class="text-2xl font-bold dark:text-white">{{ item.name }}</p>
   <p *ngIf="item.ingredients; else showWorkout" class="text-slate-400 overflow-hidden">
     {{ item.ingredients | join }}
   </p>
@@ -22,29 +22,7 @@
   </ng-template>
   <ng-template [ngIf]="!toggled">
     <button class="border-0 hover:bg-transparent hover:shadow-md" (click)="toggle()">
-      <svg
-        class="w-8 h-8 inline-block"
-        viewBox="0 0 24.00 24.00"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-        stroke="#e32400"
-        transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)">
-        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-        <g
-          id="SVGRepo_tracerCarrier"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke="#561029"
-          stroke-width="0.144"></g>
-        <g id="SVGRepo_iconCarrier">
-          <path
-            d="M10 10V16M14 10V16M4 6H20M15 6V5C15 3.89543 14.1046 3 13 3H11C9.89543 3 9 3.89543 9 5V6M18 6V14M18 18C18 19.1046 17.1046 20 16 20H8C6.89543 20 6 19.1046 6 18V13M6 9V6"
-            stroke="#e32400"
-            stroke-width="0.8399999999999999"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-        </g>
-      </svg>
+      <img class="w-8 h-8 inline-block" src="assets/images/trash.svg" alt="trash icon" />
     </button>
   </ng-template>
 </div>
