--- a/src/app/health/workouts/components/workout-form/workout-form.component.html
+++ b/src/app/health/workouts/components/workout-form/workout-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" class="bg-white divide-y divide-indigo-300">
+<form [formGroup]="form" class="bg-white dark:bg-black dark:text-white divide-y divide-indigo-300">
   <div class="p-5">
     <label class="block">
       <h3 [ngClass]="{ error: required }">
