--- a/src/app/health/workouts/containers/workouts/workouts.component.html
+++ b/src/app/health/workouts/containers/workouts/workouts.component.html
@@ -1,29 +1,22 @@
 <div class="drop-shadow-lg shadow-black">
   <div class="relative flex items-center p-4 w-full border border-indigo-300">
     <div class="flex items-center">
-      <img src="assets/images/workout.svg" class="w-12 h-12 p-1" alt="test" />
-      <h1 class="text-lg font-bold">Your workout</h1>
+      <img src="assets/images/workout.svg" class="w-12 h-12 p-1" alt="workout" />
+      <h1 class="text-lg font-bold dark:text-white">Your workout</h1>
     </div>
     <a
       [routerLink]="['../workouts/new']"
       class="button flex items-center ml-auto py-2 px-4 uppercase text-sm">
-      <svg
-        class="w-4 h-4 mr-2"
-        fill="currentColor"
-        viewBox="0 0 20 20"
-        xmlns="http://www.w3.org/2000/svg">
-        <path
-          fill-rule="evenodd"
-          d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-9h3a1 1 0 010 2h-3v3a1 1 0 01-2 0v-3H6a1 1 0 010-2h3V6a1 1 0 012 0v3z"
-          clip-rule="evenodd"></path>
-      </svg>
+      <img class="w-4 h-4 mr-2" src="assets/images/add.svg" alt="add icon" />
       <span>New Workout</span>
     </a>
   </div>
   <div
-    class="bg-white border-indigo-300 border-x border-b divide-y divide-indigo-300"
+    class="bg-white dark:bg-black border-indigo-300 border-x border-b divide-y divide-indigo-300"
     *ngIf="workouts$ | async as workouts; else loading">
-    <div *ngIf="!workouts.length" class="flex justify-center items-center text-lg min-h-[100px]">
+    <div
+      *ngIf="!workouts.length"
+      class="flex justify-center items-center text-lg min-h-[100px] dark:text-white">
       <img class="w-7 h-7 mr-2" src="assets/images/face.svg" alt="sad face" />
       No workouts, add a new workout
     </div>
@@ -34,7 +27,8 @@
   </div>
 
   <ng-template #loading>
-    <div class="flex justify-center items-center bg-white border-indigo-300 border-x border-b p-5">
+    <div
+      class="flex justify-center items-center bg-white dark:bg-black dark:text-white border-indigo-300 border-x border-b p-5">
       <!-- <img src="assets/loading.svg" alt="Fetching workouts" /> -->
       Fetching workouts...
     </div>
