--- a/src/app/health/shared/components/list-item/list-item.component.html
+++ b/src/app/health/shared/components/list-item/list-item.component.html
@@ -5,7 +5,7 @@
   </p>
 
   <ng-template #showWorkout>
-    <p>{{ item | workout }}</p>
+    <p class="text-slate-400 overflow-hidden">{{ item | workout }}</p>
   </ng-template>
 </a>
 
