--- a/src/app/health/workouts/components/workout-type/workout-type.component.html
+++ b/src/app/health/workouts/components/workout-type/workout-type.component.html
@@ -1,5 +1,5 @@
 <div
-  class="border bg-indigo-100 hover:bg-indigo-200 flex items-center mr-2 p-4 rounded-2xl cursor-pointer"
+  class="border bg-indigo-100 hover:bg-indigo-200 flex items-center mr-2 p-4 rounded-2xl cursor-pointer mt-3"
   *ngFor="let selector of selectors"
   [class.active]="selector === value"
   (click)="setSelected(selector)"
