--- a/src/app/health/meals/components/meal-form/meal-form.component.html
+++ b/src/app/health/meals/components/meal-form/meal-form.component.html
@@ -5,7 +5,7 @@
         Meal name<span class="error" *ngIf="required"> is required</span>
       </h3>
       <input
-        class="min-w-full mt-3"
+        class="w-full mt-3"
         type="text"
         placeholder="e.g. English breakfast"
         formControlName="name" />
@@ -43,17 +43,17 @@
     </div>
   </div>
 
-  <div class="p-5 flex justify-between">
+  <div class="p-5 flex flex-col sm:flex-row justify-between">
     <div>
       <button *ngIf="!exists" type="button" (click)="createMeal()">Create meal</button>
       <button *ngIf="exists" type="button" (click)="updateMeal()">Save</button>
-      <a class="button border-0 ml-3 p-2" [routerLink]="['../']">Cancel</a>
+      <a class="button border-0 sm:ml-3 p-2 dark:text-white" [routerLink]="['../']">Cancel</a>
     </div>
     <div *ngIf="exists">
       <ng-template [ngIf]="toggled">
-        <p class="inline-block mr-2">Delete item?</p>
+        <p class="block sm:inline-block mr-2 mt-3 sm:mt-0">Delete item?</p>
         <button
-          class="mr-2 border-red-600 text-red-600 hover:bg-red-800"
+          class="mt-2 sm:mt-0 sm:mr-2 border-red-600 text-red-600 hover:bg-red-800"
           type="button"
           (click)="removeMeal()">
           Yes
@@ -63,7 +63,7 @@
       <ng-template [ngIf]="!toggled">
         <button
           #delete
-          class="border-0 text-red-500 hover:bg-red-500 hover:shadow-md"
+          class="border-0 text-red-500 hover:bg-red-500 hover:shadow-md mt-3 sm:mt-0"
           type="button"
           (click)="toggle()">
           Delete
