--- a/src/app/health/schedule/components/schedule-assign/schedule-assign.component.scss
+++ b/src/app/health/schedule/components/schedule-assign/schedule-assign.component.scss
@@ -3,7 +3,7 @@
 }
 
 .container {
-  @apply relative w-full max-w-sm max-h-full border bg-white;
+  @apply relative w-full max-w-sm max-h-full border bg-white dark:bg-black;
 }
 
 .toggle-item {
@@ -12,4 +12,8 @@
   &.active {
     @apply bg-[url('src/assets/images/add-green.svg')];
   }
+}
+
+.section {
+  @apply flex justify-between items-center p-5 bg-slate-100 border-b border-indigo-300 dark:text-white dark:bg-slate-900;
 }
