--- a/src/app/health/workouts/components/workout-type/workout-type.component.scss
+++ b/src/app/health/workouts/components/workout-type/workout-type.component.scss
@@ -1,7 +1,7 @@
 :host {
-  @apply flex mt-3
+  @apply flex flex-col sm:flex-row;
 }
 
 .active {
-  @apply bg-indigo-200
+  @apply bg-indigo-200;
 }
